# platform-hrm-rust

./: .gitignore  README.md  docker-compose.yml  fix_owner_mod_rs.py  refactor_owner_imports.py  refactor_platform.py  remove_redundant_imports.py
api-gateway/: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  config.example.toml  docker-compose.yml
api-gateway/proto/: auth.proto  hris.proto
api-gateway/src/: bootstrap.rs  lib.rs  main.rs
api-gateway/src/application/auth/: check_policy.rs  mod.rs  verify_token.rs
api-gateway/src/config/: mod.rs
api-gateway/src/domain/: errors.rs
api-gateway/src/domain/auth/: claims.rs  mod.rs  policy.rs
api-gateway/src/infrastructure/: mod.rs
api-gateway/src/infrastructure/grpc/: mod.rs
api-gateway/src/infrastructure/http_client/: upstream.rs
api-gateway/src/infrastructure/keycloak/: jwks.rs  mod.rs  verifier.rs
api-gateway/src/interface/grpc/: health.rs
api-gateway/src/interface/http/: error.rs  mod.rs  state.rs
api-gateway/src/observability/: metrics.rs  tracing.rs
auth/: Cargo.toml  build.rs
auth/src/: lib.rs  main.rs
auth/src/application/iam/: rbac.rs
auth/src/domain/: mod.rs
auth/src/domain/permission/: entity.rs  repository.rs
auth/src/domain/role/: entity.rs  repository.rs
auth/src/domain/role_permission/: entity.rs
auth/src/domain/user/: entity.rs  repository.rs
auth/src/domain/user_role/: entity.rs
auth/src/infrastructure/keycloak/: mod.rs
auth/src/interface/grpc/: auth_service.rs
hris/: Cargo.toml  README.md  build.rs  refactor.py
hris/proto/: hris.proto
hris/src/: lib.rs  main.rs
hris/src/application/: mod.rs
hris/src/application/allowance_type/: dto.rs  service.rs
hris/src/application/attendance_log/: dto.rs  service.rs
hris/src/application/branch/: dto.rs  service.rs
hris/src/application/company/: dto.rs  service.rs
hris/src/application/department/: dto.rs  service.rs
hris/src/application/employee/: dto.rs  service.rs
hris/src/application/employee_allowance/: dto.rs  service.rs
hris/src/application/employment/: dto.rs  service.rs
hris/src/application/employment_contract/: dto.rs  service.rs
hris/src/application/leave_balance/: dto.rs  service.rs
hris/src/application/leave_request/: dto.rs  service.rs
hris/src/application/leave_type/: dto.rs  service.rs
hris/src/application/legal_entity/: dto.rs  service.rs
hris/src/application/payroll_item/: dto.rs  service.rs
hris/src/application/payroll_period/: dto.rs  service.rs
hris/src/application/payroll_run/: dto.rs  service.rs
hris/src/application/position/: dto.rs  service.rs
hris/src/application/salary_structure/: dto.rs  service.rs
hris/src/application/salary_structure_item/: dto.rs  service.rs
hris/src/application/shift/: dto.rs  service.rs
hris/src/application/social_security_rate/: dto.rs  service.rs
hris/src/application/tax_rate/: dto.rs  service.rs
hris/src/application/user/: service.rs
hris/src/domain/: entity.rs  errors.rs  mod.rs
hris/src/domain/allowance_type/: entity.rs  repository.rs
hris/src/domain/approval_step/: entity.rs  repository.rs
hris/src/domain/approval_workflow/: entity.rs  repository.rs
hris/src/domain/attendance_log/: entity.rs  mod.rs  repository.rs
hris/src/domain/audit_log/: entity.rs  mod.rs  repository.rs
hris/src/domain/branch/: entity.rs  repository.rs
hris/src/domain/company/: entity.rs  repository.rs
hris/src/domain/department/: entity.rs  repository.rs
hris/src/domain/employee/: entity.rs  repository.rs
hris/src/domain/employee_allowance/: entity.rs  repository.rs
hris/src/domain/employee_shift/: entity.rs  repository.rs
hris/src/domain/employment/: entity.rs  repository.rs
hris/src/domain/employment_contract/: entity.rs  repository.rs
hris/src/domain/leave_balance/: entity.rs  mod.rs  repository.rs
hris/src/domain/leave_request/: entity.rs  mod.rs  repository.rs
hris/src/domain/leave_type/: entity.rs  repository.rs
hris/src/domain/legal_entity/: entity.rs  repository.rs
hris/src/domain/payroll_item/: entity.rs  mod.rs  repository.rs
hris/src/utils/: code_generator.rs
owner-service/: Cargo.toml  build.rs
owner-service/proto/: owner.proto
owner-service/src/: main.rs
owner-service/src/domain/: mod.rs
platform/: Cargo.toml  Makefile  README.md  build.rs
platform/proto/: owner.proto  platform.proto
platform/src/: lib.rs  main.rs
platform/src/application/: mod.rs
platform/src/db/: company_pool.rs  mod.rs
platform/src/domain/: mod.rs
platform/src/infrastructure/: mod.rs
platform/src/interface/: mod.rs
platform/src/middleware/: auth.rs  company.rs  mod.rs
(+233 files in other folders)
