[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
    "trace",
    "cors",
    "request-id",
    "util",
    "timeout",
    "compression-full",
    "set-header",
] }
hyper = { version = "1", features = ["full"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"

reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }
jsonwebtoken = "9"
moka = { version = "0.12", features = ["future"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

uuid = { version = "1", features = ["v4"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
tower_governor = "0.4.0"

tonic = "0.12"
prost = "0.13"
tonic-reflection = "0.12"
tonic-health = "0.12"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"
