[package]
name = "hris"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-rust_decimal"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = "1.32"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
utoipa = { version = "4.2", features = ["uuid", "chrono"] } 
validator = { version = "0.18", features = ["derive"] }
tonic = "0.12"
prost = "0.13"
axum = "0.7"
tower = { version = "0.4", features = ["full", "util"] }
tower-http = { version = "0.6", features = ["full"] }
tokio-stream = "0.1"
serde_json = "1.0"
http = "1.1"
dashmap = "6.1"

[build-dependencies]
tonic-build = "0.12"

