[package]
name = "platform"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.12"
prost = "0.13"
axum = "0.7"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.6", features = ["full", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"
jsonwebtoken = "9.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1.1"
reqwest = { version = "0.12", features = ["json"] }
serde_repr = "0.1"

[build-dependencies]
tonic-build = "0.12"
